Update Ollama API to 0.7.1
